# pasty

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: hastebin.rs  main.rs  uploader.rs
