[package]
name = "pasty"
version = "0.2.0"
authors = ["Joe K"]
repository="https://github.com/joek13/pasty"
description="A CLI tool for uploading to hastebin-like sites."
license="MIT"

[dependencies]
"hyper"="0.10.12"
"hyper-native-tls"="0.2.4"
"clap"="2.24.2"
"serde"="1.0.8"
"serde_derive"="1.0.8"
"serde_json"="1.0.2"
"regex" = "0.2.2"
